# assemblyz

./: .flake8  .pylintrc  README.md  pyproject.toml
assemblyz/: downloader.py  tools.py
assemblyz/cli/: cli.py
tests/: test_tools.py
