[tool.poetry]
name = "assemblyz"
version = "0.1.0"
description = ""
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-mypy = "^17.8.0"
flake8-docstrings = "^1.7.0"
pylint = "^2.17.0"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.poetry.scripts]
assemblyz = 'assemblyz.cli.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

